# agh-ai-mlops-lab1-hw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  tests_watch.sh
artifacts/: inference.py
model/: __init__.py
test/: test_endpoints.py  test_model.py
