[project]
name = "agh-ai-mlops-lab1-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "joblib>=1.4.2",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
